pushing for merge

--- a/src/components/banner/bannersection.css
+++ b/src/components/banner/bannersection.css
@@ -13,10 +13,10 @@
     background-color: white;
   }
 
-  .primary-heading.wh {
+  /* .primary-heading.wh {
     color: white;
     padding: 15px 0;
-  }
+  } */
   .primary-button {
     width: 70%;
   }
@@ -26,7 +26,7 @@
   }
   .arrow-icon-banner {
     background-color: #841d2e;
-    padding: 3px;
+    padding: 6px;
     border-radius: 50%;
   }
 
@@ -38,11 +38,6 @@
 
   .coloured-bg {
     background-color: #841d2e;
-    /* display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 10px;
-    grid-row-gap: 0px; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -102,12 +97,15 @@
     border-radius: 50%;
     background-color: var(--primary-background-color);
   }
+  .bannerTwo {
+    background-color: #f0f0f0;
+    padding: 6px;
+    border-radius: 50%;
+  }
 }
 
-/* //// */
-
 /* Small devices (portrait tablets, 600px and up) */
-/* @media only screen and (min-width: 600px) {
+@media only screen and (min-width: 600px) {
   .banner-container {
     height: auto;
     display: grid;
@@ -127,7 +125,7 @@
   }
 
   .arrow-icon-banner {
-    padding: 2px;
+    padding: 6px;
   }
 
   .secondary-paragraph {
@@ -161,9 +159,8 @@
   }
 }
 
-
 /* Medium devices (landscape tablets, 768px and up) */
-/* @media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .banner-container {
     height: 520px;
   }
@@ -190,10 +187,15 @@
   .right img {
     height: 500px;
   }
-} */
+  .bannerTwo {
+    background-color: #f0f0f0;
+    padding: 6px;
+    border-radius: 50%;
+  }
+}
 
 /* Large devices (laptops/desktops, 992px and up) */
-/* @media only screen and (min-width: 992px) {
+@media only screen and (min-width: 992px) {
   .banner-container {
     height: 656px;
   }
@@ -213,7 +215,7 @@
 
   .arrow-icon-banner {
     background-color: #841d2e;
-    padding: 3px;
+    padding: 6px;
     border-radius: 50%;
   }
 
@@ -253,7 +255,12 @@
     height: 656px;
     position: absolute;
   }
-} */
+  .bannerTwo {
+    background-color: #f0f0f0;
+    padding: 6px;
+    border-radius: 50%;
+  }
+}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
@@ -278,7 +285,12 @@
 
   .arrow-icon-banner {
     background-color: #841d2e;
-    padding: 3px;
+    padding: 6px;
+    border-radius: 50%;
+  }
+  .bannerTwo {
+    background-color: #f0f0f0;
+    padding: 6px;
     border-radius: 50%;
   }
 
